--- a/Assignment_1/assign1.tex
+++ b/Assignment_1/assign1.tex
@@ -182,9 +182,7 @@ columns=fullflexible
    Assignment 1\\ \Large AI1110: Probability and Random Variables \\ \large Indian Institute of Technology Hyderabad
 %	}
 }
-\author{ Aditya Garg% <-this % stops a space
-\\
-CS22BTECH11002	
+\author{ Aditya Garg \\ CS22BTECH11002 \\ 26 April 2023	
 	
 }	
 %\title{
@@ -244,7 +242,7 @@ From the definition of probability $P(E)$ , number of favourable outcomes is alw
 (B) $-1.5$
 \\
 \\
-\indent Since  $ $-1.5$ \le 0 $ , From (1)
+\indent Since  $ -1.5 < 0 $ , From (1)
 \\
 \\
 \indent It cannot be a probability of any event.
