--- a/Assignment_1/assign1.tex
+++ b/Assignment_1/assign1.tex
@@ -99,17 +99,19 @@ columns=fullflexible
 \begin{enumerate*}
    
 \item \hspace{4pt}\(\displaystyle\frac{2}{3}\) \hspace{5pt} \item \hspace{4pt}\(-1.5\) \hspace{5pt} \item \hspace{4pt}\(15\%\) \hspace{5pt}  \item \hspace{4pt} \(0.7\) \hspace{5pt}     
-\end{enumerate*}\\
+\end{enumerate*}
+
+\bigskip
 
 %Answer
 \noindent \textbf{Answer}:
 
-Probability of an event \(E\) , written as \(P(E)\):\\
-\\
-\(P(E)=\displaystyle\frac{\text{Number of outcomes favourable to $E$}}{\text{Total Number of possible outcomes in sample space }}
-\)
-\\
-\\
+Probability of an event \(E\) , written as \(P(E)\):
+
+\medskip
+\(P(E)=\displaystyle\frac{\text{Number of outcomes favourable to \(E\)}}{\text{Total Number of possible outcomes in sample space }}\)
+
+\bigskip
 From the definition of probability \(P(E)\) , number of favourable outcomes is always less than or equal to the number of all possible outcomes.
 
 
@@ -121,39 +123,41 @@ From the definition of probability \(P(E)\) , number of favourable outcomes is a
     
 
 \item \(\displaystyle\frac{2}{3}\)
-\\
-\\
+
+\medskip
 \indent Since \(0 \le \displaystyle\frac{2}{3} \le 1\) , From \eqref{eq:prob}
-\\
-\\
-\indent It can be probability of an event.
-\\
 
+\medskip
+\indent It can be probability of an event.
+
+\bigskip
 \item \(-1.5\)
-\\
-\\
-\indent Since  \( -1.5 < 0 \) , From \eqref{eq:prob}\\
-\\
+
+\bigskip
+\indent Since  \( -1.5 < 0 \) , From \eqref{eq:prob}
+
+\medskip
 \indent It cannot be a probability of any event.
-\\
 
+\bigskip
 \item \(15\%\)
-\\
-\\
-\indent \(15\%=\displaystyle\frac{15}{100}\)
-\\
-\\
-\indent Since \(0 \le \displaystyle\frac{15}{100} \le 1\) , From \eqref{eq:prob}
-\\
-\\
-\indent It can be probability of an event.
-\\
-\\
-\\
-\\
-\item \(0.7\)\\
 
-Since \(0 \le 0.7 \le 1\), From \eqref{eq:prob}\\
+\bigskip
+\indent \(15\%=\displaystyle\frac{15}{100}\)
+
+\bigskip
+\indent Since \(0 \le \displaystyle\frac{15}{100} \le 1\) , From \eqref{eq:prob}
+
+\medskip
+\indent It can be probability of an event.
+
+\bigskip
+\bigskip
+
+\item \(0.7\) \bigskip
+
+Since \(0 \le 0.7 \le 1\), From \eqref{eq:prob} 
+\medskip
 
 It can be a probability of an event.
 \end{enumerate}
