--- a/Assignment_1/assign1.tex
+++ b/Assignment_1/assign1.tex
@@ -92,26 +92,24 @@ columns=fullflexible
 
 
 \noindent  \textbf{10.15.1.4}:
- Which of the following cannot be the probability of an event ?
-\vspace{7pt}
+ Which of the following cannot be the probability of an event ? 
 
-\begin{enumerate*}
-   
-\item \hspace{4pt}\(\displaystyle\frac{2}{3}\) \hspace{5pt} 
-\item \hspace{4pt}\(-1.5\) \hspace{5pt} 
-\item \hspace{4pt}\(15\%\) \hspace{5pt}  
-\item \hspace{4pt} \(0.7\) \hspace{5pt}     
+\begin{enumerate*}[label=(\Alph*)]
+\item \(\frac23\) 
+\item \(-1.5\) 
+\item \(15\%\) 
+\item \(0.7\) 
 \end{enumerate*}
 
-\vspace{10pt}
+
 %Answer
-\textbf{Answer}:
+\noindent \textbf{Solution}:
 
 Probability of an event $E$ , written as \pr{E}\:
 
 \begin{align}
 \label{eq:def}
-\pr{E}=\displaystyle\frac{\text{Number of outcomes favourable to \(E\)}}{\text{Total Number of possible outcomes in sample space}}
+\pr{E}=\dfrac{\text{Number of outcomes favourable to $E$}}{\text{Total Number of possible outcomes in sample space}}
 \end{align}
 
 
@@ -122,12 +120,12 @@ From the definition of probability \pr{E}, number of favourable outcomes is alwa
    \label{eq:prob}
    0 \le \pr{E}\le 1 
 \end{align}
-\begin{enumerate}
+\begin{enumerate}[label=(\Alph*)]
     
 
-\item \pr{E} = \(\displaystyle\frac{2}{3}\)
+\item \pr{E} = \(\frac23\)
 \begin{align}
-    \because 0 \le \displaystyle\frac{2}{3} \le 1
+    \because 0 \le \frac23 \le 1
 \end{align}
 
 From \eqref{eq:prob} ,
@@ -146,11 +144,11 @@ It cannot be a probability of any event.
 \item \pr{E} = \(15\%\)
 
 \begin{align}
-15\%=\displaystyle\frac{15}{100}
+15\%=\frac{15}{100}
 \end{align}
 
 \begin{align}
-\because 0 \le \displaystyle\frac{15}{100} \le 1
+\because 0 \le \frac{15}{100} \le 1
 \end{align}
 
 From \eqref{eq:prob} ,
@@ -166,6 +164,5 @@ From \eqref{eq:prob} ,
 
 It can be a probability of an event.
 \end{enumerate}
-
 
 \end{document}
