--- a/Assignment_1/assign1.tex
+++ b/Assignment_1/assign1.tex
@@ -109,7 +109,7 @@ Probability of an event $E$ , written as \pr{E}\:
 
 \begin{align}
 \label{eq:def}
-\pr{E}=\dfrac{\text{Number of outcomes favourable to $E$}}{\text{Total Number of possible outcomes in sample space}}
+\pr{E}=\frac{\text{Number of outcomes favourable to $E$}}{\text{Total Number of possible outcomes in sample space}}
 \end{align}
 
 
