--- a/Assignment_1/assign1.tex
+++ b/Assignment_1/assign1.tex
@@ -91,15 +91,15 @@ columns=fullflexible
 \renewcommand{\thetable}{\theenumi}
 
 
-\noindent  \textbf{10.15.1.4}:
+\noindent \textbf{10.15.1.4}:
  Which of the following cannot be the probability of an event ? 
 
-\begin{enumerate*}[label=(\Alph*)]
-\item \(\frac23\) 
-\item \(-1.5\) 
-\item \(15\%\) 
-\item \(0.7\) 
-\end{enumerate*}
+\begin{enumerate}[label=(\Alph*)]
+\item $\frac{2}{3}$ 
+\item $-1.5$ 
+\item $15\%$ 
+\item $0.7$ 
+\end{enumerate}
 
 
 %Answer
@@ -123,16 +123,16 @@ From the definition of probability \pr{E}, number of favourable outcomes is alwa
 \begin{enumerate}[label=(\Alph*)]
     
 
-\item \pr{E} = \(\frac23\)
+\item \pr{E} = $\frac{2}{3}$
 \begin{align}
-    \because 0 \le \frac23 \le 1
+    \because 0 \le \frac{2}{3} \le 1
 \end{align}
 
 From \eqref{eq:prob} ,
 
  It can be probability of an event.
 
-\item \pr{E} = \(-1.5\)
+\item \pr{E} = $-1.5$
 \begin{align}
 \because  -1.5 < 0 
 \end{align}
@@ -141,7 +141,7 @@ From \eqref{eq:prob} ,
 
 It cannot be a probability of any event.
 
-\item \pr{E} = \(15\%\)
+\item \pr{E} = $15\%$
 
 \begin{align}
 15\%=\frac{15}{100}
@@ -155,7 +155,7 @@ From \eqref{eq:prob} ,
 
 \indent It can be probability of an event.
 
-\item \pr{E} = \(0.7\) 
+\item \pr{E} = $0.7$ 
 \begin{align}
 \because 0 \le 0.7 \le 1 
 \end{align}
