--- a/Assignment_1/assign1.tex
+++ b/Assignment_1/assign1.tex
@@ -91,7 +91,7 @@ columns=fullflexible
 \renewcommand{\thetable}{\theenumi}
 
 
-\noindent \textbf{10.15.1.4}:
+\textbf{10.15.1.4}:
  Which of the following cannot be the probability of an event ? 
 
 \begin{enumerate}[label=(\Alph*)]
@@ -103,7 +103,7 @@ columns=fullflexible
 
 
 %Answer
-\noindent \textbf{Solution}:
+\solution
 
 Probability of an event $E$ , written as \pr{E}\:
 
@@ -153,7 +153,7 @@ It cannot be a probability of any event.
 
 From \eqref{eq:prob} ,
 
-\indent It can be probability of an event.
+It can be probability of an event.
 
 \item \pr{E} = $0.7$ 
 \begin{align}
