--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -111,9 +111,9 @@ chosen at random from the same urn without replacing the first ball.
 
 Probability of an event $E$, written as $\pr{E}$
 \begin{align}
-P(E)=\displaystyle\frac{\text{Number of outcomes favourable to $E$}}{\text{Total Number of possible outcomes in sample space }}
+\pr{E}=\displaystyle\frac{\text{Number of outcomes favourable to $E$}}{\text{Total Number of possible outcomes in sample space }}
 \end{align}
-Let the whit ball in first urn be 'W' and the black ball in second urn be 'B'.
+Let the white ball in first urn be 'W' and the black ball in second urn be 'B'.
 
 \begin{enumerate}[label =(\alph*)]
 \item Sample Space S:
