--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -142,8 +142,8 @@ Let $Z$ be a Bernoulli random variable
   \pr{Z=0} &= \pr{Z=1}\\
          &=\frac{1}{2}
   \end{align}
-Let $X_1$ be a random variable denoting first ball chosen from Urn 1 \\
- $X_2$ be random variable denoting second ball chosen from Urn 1
+Let $X$ be a random variable denoting first ball is chosen and
+ $Y$ be random variable denoting second ball is chosen .
 
 \begin{table}[ht!]
 		\centering
@@ -151,8 +151,6 @@ Let $X_1$ be a random variable denoting first ball chosen from Urn 1 \\
 		\caption{}
 		\label{table:table1}	
 	\end{table}
-Let $Y_1$ be a random variable denoting first ball chosen from Urn 2 \\
-$Y_2$ be random variable denoting second ball chosen from Urn 2
 
 \begin{table}[ht!]
 		\centering
@@ -166,7 +164,7 @@ $Y_2$ be random variable denoting second ball chosen from Urn 2
 \item Sample Space S:
 \begin{align}
 \lcbrak{001,010,002,020,021,012,101,}\\
- \rcbrak{110,102,120,121,112} \nonumber
+ \rcbrak{110,102,120,121,112} 
 \end{align} 
 \begin{align}
     \therefore n(S) = 12
@@ -193,4 +191,3 @@ The favourable outcomes are
 \end{enumerate}
 
 \end{document}
-
