--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -169,25 +169,27 @@ Let $X$ be a random variable denoting first ball is chosen and
 \begin{align}
     \therefore n(S) = 12
 \end{align}
-
-\item Let $E$ be event that 2 black balls are chosen,
-The favourable outcomes are 
-\cbrak{001,010}
+\item Let $E$ be event that 2 black balls are chosen.
+Required Probability:
 \begin{align}
-   \pr{E}&=\frac{2}{12}\\ 
-        &=\frac{1}{6} \\
-    \therefore \pr{E} &= \frac{1}{6}
+&\pr{ (X =0,Y=1) | Z=0}\pr{Z=0} +\\ \nonumber
+&\pr{  (X =1,Y=0) | Z=0}\pr{Z=0}\\ 
+&= 1/3\times1/2\times1/2 + 1/3\times1/2\times1/2\\
+&= 1/6
 \end{align}
-
-\item Let $E$ be event that balls of opposite colours are chosen,
-The favourable outcomes are 
-
-\cbrak{002,020,012,021,102,120,112,121}
 \begin{align}
-    \pr{E}&=\frac{8}{12}\\
-        &=\frac{2}{3} \\
-    \therefore \pr{E} &= \frac{2}{3}
+\therefore \pr{E} = \frac{1}{6} 
+\end{align}
+\item Let $E$ be event that balls of opposite colours are chosen.
+Required Probability:
+\begin{align}
+\pr{(X+Y)>1} &=\pr{((X+Y)>1)|Z =0}  \\ \nonumber
+& + \pr{((X+Y)>1)|Z=1} \\ 
+&= 8\times1/3\times1/2\times1/2\\
+&= 2/3\\
+\end{align}
+\begin{align}
+\therefore \pr{E} &= \frac{2}{3}
 \end{align}
 \end{enumerate}
-
 \end{document}
