--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -192,8 +192,8 @@ Required Probability:
 From the axioms of probability ,\\
 Required Probability:
 \begin{align}
-&\pr{(X+Y)>1} =\\ \nonumber
-&1-\pr{(X+Y)=1,Z =0} -\pr{(X+Y)=1,Z=1}  \\ \label{eq:2}
+&\pr{(X+Y)>1} = 1 - \pr{(X+Y)=1} \\ 
+&=1-\pr{(X+Y)=1,Z =0} -\pr{(X+Y)=1,Z=1}  \\ \label{eq:2}
 &\pr{X+Y=1,Z=1} =\\ \nonumber
 &\pr{ (X =0,Y=1) | Z=1}\pr{Z=1} +\\ \nonumber
 &\pr{  (X =1,Y=0) | Z=1}\pr{Z=1}\\ 
