--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -180,9 +180,8 @@ Let $X$ be a random variable denoting first ball is chosen and
 Required Probability:
 \begin{align}  \label{eq:1}
 &\pr{X+Y=1,Z=0} =\\ \nonumber
-&\pr{ (X =0,Y=1) | Z=0}\pr{Z=0} +\\ \nonumber
-&\pr{  (X =1,Y=0) | Z=0}\pr{Z=0}\\ 
-&= 1/3\times1/2\times1/2 + 1/3\times1/2\times1/2\\ 
+&\pr{ (X+Y=1) | Z=0}\pr{Z=0} \\ \nonumber
+&= \frac{1}{3}\times\frac{1}{2}\times\frac{1}{2} + \frac{1}{3}\times\frac{1}{2}\times\frac{1}{2}\\ 
 &= 1/6 
 \end{align}
 \begin{align}
@@ -191,19 +190,15 @@ Required Probability:
 \item Let $E$ be event that balls of opposite colours are chosen.\\
 From the axioms of probability ,\\
 Required Probability:
-\begin{align}
-&\pr{(X+Y)>1} = 1 - \pr{(X+Y)=1} \\ 
-&=1-\pr{(X+Y)=1,Z =0} -\pr{(X+Y)=1,Z=1}  \\ \label{eq:2}
-&\pr{X+Y=1,Z=1} =\\ \nonumber
-&\pr{ (X =0,Y=1) | Z=1}\pr{Z=1} +\\ \nonumber
-&\pr{  (X =1,Y=0) | Z=1}\pr{Z=1}\\ 
-&= 1/3\times1/2\times1/2 + 1/3\times1/2\times1/2\\ 
-&= 1/6  
-\end{align}
+\begin{multline}
+\pr{(X+Y)>1} = 1 - \pr{(X+Y)=1}  \\
+\pr{X+Y=1,Z=0} =\pr{X+Y=1,Z=1} \\ \label{eq:2}
+= \frac{1}{6}  \\
+\end{multline}
 Using \eqref{eq:1} and \eqref{eq:2}
 \begin{align}
 \pr{(X+Y)>1} &=1-2\times\frac{1}{6}\\
-&=2/3
+&=\frac{2}{3}
 \end{align}
 \begin{align}
 \therefore \pr{E} &= \frac{2}{3}
