--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -129,29 +129,9 @@ chosen at random from the same urn without replacing the first ball.
 % \begin{align}
 % \pr{E}=\displaystyle\frac{\text{Number of outcomes favourable to $E$}}{\text{Total Number of possible outcomes }}
 % \end{align}
-Let $Z$ be a Bernoulli random variable
- \begin{equation}
-    Z=
-    \begin{cases}
-      0, & \text{if Urn 1 chosen }\\
-      1, & \text{if Urn 2 chosen}
-    \end{cases}
-  \end{equation}
-  Since both events are equally likely
-  \begin{align}
-  \pr{Z=0} &= \pr{Z=1}\\
-         &=\frac{1}{2}
-  \end{align}
 Let $X$ be a random variable denoting first ball is chosen and
  $Y$ be random variable denoting second ball is chosen .
- \begin{enumerate}
-     \item $(X+Y =1,Z=0) $ represents 2 black balls are chosen.
-     \item $(X+Y =1,Z=1) $ represents 2 white balls are chosen.
-     \item $ (X+Y) > 1 $ represents 2 balls of opposite colors are chosen.
- \end{enumerate}
  
- 
-
 \begin{table}[ht!]
 		\centering
 		\input{Tables/table1.tex}
@@ -166,12 +146,15 @@ Let $X$ be a random variable denoting first ball is chosen and
 		\label{table:table2}	
 	\end{table}
 
- 
+Since $X$ is a uniformly distributed random variable,
+For $x$: \cbrak{0,1,2,3,4,5}
+\begin{align}
+\pr{X=x} = \frac{1}{6}
+\end{align}
 \begin{enumerate}[label =(\alph*)]
 \item Sample Space S:
 \begin{align}
-\lcbrak{001,010,002,020,021,012,101,}\\
- \rcbrak{110,102,120,121,112} 
+\cbrak{01,10,02,20,12,21,34,43,35,53,45,54}
 \end{align} 
 \begin{align}
     \therefore n(S) = 12
@@ -179,28 +162,25 @@ Let $X$ be a random variable denoting first ball is chosen and
 \item Let $E$ be event that 2 black balls are chosen.\\
 Required Probability:
 \begin{align}  \label{eq:1}
-&\pr{X+Y=1,Z=0} =\\ \nonumber
-&\pr{ (X+Y=1) | Z=0}\pr{Z=0} \\ \nonumber
-&= (\frac{1}{3}\times\frac{1}{2} + \frac{1}{3}\times\frac{1}{2})\times\frac{1}{2}\\ 
+&\pr{X=0,Y=1}+\pr{X=1, Y =0} \\
+&= \frac{1}{6}\times\frac{1}{2} + \frac{1}{6}\times\frac{1}{2}\\ 
 &= 1/6 
 \end{align}
 \begin{align} 
 \therefore \pr{E} = \frac{1}{6} 
 \end{align}
 \item Let $E$ be event that balls of opposite colours are chosen.\\
-From the axioms of probability ,\\
+From the axioms of probability , \\
 Required Probability:
 \begin{align}
-\pr{(X+Y)>1} = 1 - \pr{(X+Y)=1} 
+&1- (\pr{X+Y=1} + \pr{X+Y=7})
 \end{align}
-Using Symmetry ,
-\begin{multline}
-\pr{X+Y=1,Z=0} =\pr{X+Y=1,Z=1} \\ \label{eq:2}
-=\frac{1}{6} 
-\end{multline}
-Using \eqref{eq:1} and \eqref{eq:2}
+By Symmetry,
 \begin{align}
-\pr{(X+Y)>1} &=1-2\times(\frac{1}{6})\\
+&\pr{X+Y=1}=\pr{X+Y=7}\\
+&\because \pr{X=2,Y=5}=0\\
+&\therefore \pr{X+Y=7}=\frac{1}{6} \\
+&=1-2\times\frac{1}{6}\\
 &=\frac{2}{3}
 \end{align}
 \begin{align}
