--- a/Assignment_2/Tables/table1.tex
+++ b/Assignment_2/Tables/table1.tex
@@ -203,23 +203,23 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \hhline{|-|-|-|-|-|-|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{$X | Z =0$}}
+	{\gnumericPB{\centering}\gnumbox{$X$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{\textbf{Description}}}
-    &\multicolumn{1}{p{\gnumericColC}|}%
-    {\gnumericPB{\centering}\gnumbox{$Y | Z = 0 $}}
-    &\multicolumn{1}{p{\gnumericColD}|}%
-	{\gnumericPB{\centering}\gnumbox{\textbf{Description}}}
+ %    &\multicolumn{1}{p{\gnumericColC}|}%
+ %    {\gnumericPB{\centering}\gnumbox{$Y | Z = 0 $}}
+ %    &\multicolumn{1}{p{\gnumericColD}|}%
+	% {\gnumericPB{\centering}\gnumbox{\textbf{Description}}}
 \\
 \hhline{|--|--|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\centering}\gnumbox{$0$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{$B_1$ chosen}}
-    &\multicolumn{1}{p{\gnumericColC}|}%
-   {\gnumericPB{\centering}\gnumbox{$0$}}
-    &\multicolumn{1}{p{\gnumericColD}|}%
-	{\gnumericPB{\centering}\gnumbox{$B_1$ chosen }}
+ %    &\multicolumn{1}{p{\gnumericColC}|}%
+ %   {\gnumericPB{\centering}\gnumbox{$0$}}
+ %    &\multicolumn{1}{p{\gnumericColD}|}%
+	% {\gnumericPB{\centering}\gnumbox{$B_1$ chosen }}
 	
 \\
 \hhline{|--|--|}
@@ -227,10 +227,10 @@
 	{\gnumericPB{\centering}\gnumbox{$1$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{$B_2$ chosen}}
-	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{$1$}}
-    &\multicolumn{1}{p{\gnumericColD}|}%
-	{\gnumericPB{\centering}\gnumbox{$B_2$ chosen }}
+	% &\multicolumn{1}{p{\gnumericColC}|}%
+	% {\gnumericPB{\centering}\gnumbox{$1$}}
+ %    &\multicolumn{1}{p{\gnumericColD}|}%
+	% {\gnumericPB{\centering}\gnumbox{$B_2$ chosen }}
  
 \\
 \hhline{|--|--|}
@@ -238,10 +238,32 @@
 	{\gnumericPB{\centering}\gnumbox{$2$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{$W$ chosen}}
-    &\multicolumn{1}{p{\gnumericColC}|}%   
-    {\gnumericPB{\centering}\gnumbox{$2$}}
-    &\multicolumn{1}{p{\gnumericColD}|}%
-	{\gnumericPB{\centering}\gnumbox{$W$ chosen }}
+ %    &\multicolumn{1}{p{\gnumericColC}|}%   
+ %    {\gnumericPB{\centering}\gnumbox{$2$}}
+ %    &\multicolumn{1}{p{\gnumericColD}|}%
+	% {\gnumericPB{\centering}\gnumbox{$W$ chosen }}
+
+ \\
+ \hhline{|--|--|}
+	 \multicolumn{1}{|p{\gnumericColA}|}%
+	{\gnumericPB{\centering}\gnumbox{$3$}}
+	&\multicolumn{1}{p{\gnumericColB}|}%
+	{\gnumericPB{\centering}\gnumbox{$W_1$ chosen}}
+
+ \\
+ \hhline{|--|--|}
+	 \multicolumn{1}{|p{\gnumericColA}|}%
+	{\gnumericPB{\centering}\gnumbox{$4$}}
+	&\multicolumn{1}{p{\gnumericColB}|}%
+	{\gnumericPB{\centering}\gnumbox{$W_2$ chosen}}
+
+ \\
+ \hhline{|--|--|}
+	 \multicolumn{1}{|p{\gnumericColA}|}%
+	{\gnumericPB{\centering}\gnumbox{$5$}}
+	&\multicolumn{1}{p{\gnumericColB}|}%
+	{\gnumericPB{\centering}\gnumbox{$B$ chosen}}
+ 
 \\
 \hhline{|-|-|-|-|-|}
 \end{tabular}
