--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -61,7 +61,7 @@ columns=fullflexible
 \newcommand{\BEQA}{\begin{eqnarray}}
 \newcommand{\EEQA}{\end{eqnarray}}
 \newcommand{\define}{\stackrel{\triangle}{=}}
-
+\newcommand{\xor}{\oplus}
 \bibliographystyle{IEEEtran}
 
 \providecommand{\mbf}{\mathbf}
@@ -162,7 +162,7 @@ Let $X_1$ be a random variable denoting first ball is chosen and
 
 \begin{table}[ht!]
 		\centering
-		\input{Tables/table1.tex}
+		\input{table-1.tex}
 		\caption{}
 		\label{table:table1}	
 	\end{table}
@@ -184,32 +184,32 @@ Let $X_1$ be a random variable denoting first ball is chosen and
 % \begin{align}
 %     \therefore n(S) = 12
 % % \end{align}
-\item Let $E$ be event that 2 black balls are chosen.\\
+\item Let $E$ be event that 2 black balls are chosen.
+\begin{align}
+E &= (X_1+X_2)\prime  \\
+&= X_1\prime X_2\prime
+\end{align}
 Required Probability:
 \begin{align}  
-&\pr{X_1+X_2=0,Z=0} =\\ \nonumber
-&\pr{ (X_1+X_2=0) | Z=0}\pr{Z=0} \\ \nonumber
+&\pr{X_1\prime X_2\prime} \\ \nonumber
+&=\pr{X_1\prime X_2\prime | Z\prime}\pr{Z\prime} \\ \nonumber
 &= \frac{2}{3}\times\frac{1}{2}\times\frac{1}{2} \\ \label{eq:1}
 &= 1/6 
 \end{align}
 \begin{align}
 \therefore \pr{E} = \frac{1}{6} 
 \end{align}
-\item Let $E$ be event that balls of opposite colours are chosen.\\
-From the axioms of probability ,\\
-Required Probability:
-\begin{multline}
-\pr{(X_1+X_2)=1} = \\
-1 - \pr{(X_1+X_2)=0} -\pr{(X_1+X_2)=2}  \\
-\end{multline}
-By Symmetry 
+\item Let $E$ be event that balls of opposite colours are chosen.
 \begin{align}
-\pr{X_1+X_2=0,Z=0} &=\pr{X_1+X_2=2,Z=1}  \label{eq:2} \\
-&= \frac{1}{6}  
+E &= X_1 \xor X_2 \\
+&= X_1 X_2\prime + X_1\prime X_2
 \end{align}
-Using \eqref{eq:1} and \eqref{eq:2}
+Required Probability : 
 \begin{align}
-\pr{(X_1+X_2)=1} &=1-2\times\frac{1}{6}\\
+&\pr{X_1 X_2\prime + X_1\prime X_2} \\
+&=\pr{X_1 X_2\prime} + \pr{X_1\prime X_2} \\
+&\because \pr{X_1 X_1 \prime X_2 X_2 \prime} = 0 \\
+&=(\frac{1}{3}\times\frac{1}{2} + \frac{2}{3}\times\frac{1}{2}\times\frac{1}{2})\times 2 \\
 &=\frac{2}{3}
 \end{align}
 \begin{align}
