--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -162,7 +162,7 @@ Let $X_1$ be a random variable denoting first ball is chosen and
 
 \begin{table}[ht!]
 		\centering
-		\input{table-1.tex}
+		\input{Tables/table1.tex}
 		\caption{}
 		\label{table:table1}	
 	\end{table}
