--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -186,13 +186,13 @@ Let $X_1$ be a random variable denoting first ball is chosen and
 % % \end{align}
 \item Let $E$ be event that 2 black balls are chosen.
 \begin{align}
-E &= (X_1+X_2)\prime  \\
-&= X_1\prime X_2\prime
+E &= (X_1+X_2)^\prime  \\
+&= X_1^\prime X_2^\prime
 \end{align}
 Required Probability:
 \begin{align}  
-&\pr{X_1\prime X_2\prime} \\ \nonumber
-&=\pr{X_1\prime X_2\prime | Z\prime}\pr{Z\prime} \\ \nonumber
+&\pr{X_1^\prime X_2^\prime} \\ \nonumber
+&=\pr{X_1^\prime X_2^\prime | Z^\prime}\pr{Z^\prime} \\ \nonumber
 &= \frac{2}{3}\times\frac{1}{2}\times\frac{1}{2} \\ \label{eq:1}
 &= 1/6 
 \end{align}
@@ -202,13 +202,13 @@ Required Probability:
 \item Let $E$ be event that balls of opposite colours are chosen.
 \begin{align}
 E &= X_1 \xor X_2 \\
-&= X_1 X_2\prime + X_1\prime X_2
+&= X_1 X_2^\prime + X_1^\prime X_2
 \end{align}
 Required Probability : 
 \begin{align}
-&\pr{X_1 X_2\prime + X_1\prime X_2} \\
-&=\pr{X_1 X_2\prime} + \pr{X_1\prime X_2} \\
-&\because \pr{X_1 X_1 \prime X_2 X_2 \prime} = 0 \\
+&\pr{X_1 X_2^\prime + X_1^\prime X_2} \\
+&=\pr{X_1 X_2^\prime} + \pr{X_1^\prime X_2} \\
+&\because \pr{X_1 X_1 ^\prime X_2 X_2 ^\prime} = 0 \\
 &=(\frac{1}{3}\times\frac{1}{2} + \frac{2}{3}\times\frac{1}{2}\times\frac{1}{2})\times 2 \\
 &=\frac{2}{3}
 \end{align}
