--- a/Software_song_player/software.tex
+++ b/Software_song_player/software.tex
@@ -138,6 +138,7 @@ The code is structured as follows:
 
 \section{Conclusion}
 The Music Player project provides a basic music player application with features such as playing audio files, controlling playback, and displaying the currently playing song. It demonstrates the use of Pygame and its audio capabilities in Python programming.
+The code for the above can be found at \textbf{https://github.com/Aditya2174/AI1110/blob/main/Software_song_player/Audio/code_1.py}
 
 
 \section{Images}
