--- a/Assignment_2/assign2.tex
+++ b/Assignment_2/assign2.tex
@@ -186,7 +186,7 @@ Let $X_1$ be a random variable denoting first ball is chosen and
 % % \end{align}
 \item Let $E$ be event that 2 black balls are chosen.
 \begin{align}
-E &= (X_1+X_2)^\prime  \\
+E &= \brak{X_1+X_2}^\prime  \\
 &= X_1^\prime X_2^\prime
 \end{align}
 Required Probability:
@@ -209,7 +209,7 @@ Required Probability :
 &\pr{X_1 X_2^\prime + X_1^\prime X_2} \\
 &=\pr{X_1 X_2^\prime} + \pr{X_1^\prime X_2} \\
 &\because \pr{X_1 X_1 ^\prime X_2 X_2 ^\prime} = 0 \\
-&=(\frac{1}{3}\times\frac{1}{2} + \frac{2}{3}\times\frac{1}{2}\times\frac{1}{2})\times 2 \\
+&=\brak{\frac{1}{3}\times\frac{1}{2} + \frac{2}{3}\times\frac{1}{2}\times\frac{1}{2}}\times 2 \\
 &=\frac{2}{3}
 \end{align}
 \begin{align}
